Pagination finished + diplay screenings only for owner finished + Token managment and Exception managment WIP
